tests/fixtures/errors/invalid_nested_startuml.puml
@startuml
A -> B : one
@startuml
B -> A : two
@enduml
